Updated get password to use form

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -24,7 +24,7 @@
       <br />
       Get a password bellow to access the benchmark results.
     </p>
-    <a class="button is-bg-blue" href="//www.nuxeo.com/about/contact/">Get a password</a>
+    <a class="button is-bg-blue" href="http://info.nuxeo.com/benchmarks-password.html" data-featherlight="iframe" data-featherlight-iframe-height="380" data-featherlight-iframe-width="480">Get a password</a>
   </div>
 </div>
 
