--- a/layouts/page/401.html
+++ b/layouts/page/401.html
@@ -6,7 +6,7 @@
   <div class="large-8 medium-10 small-12 columns">
     <h1>401: Unauthorized</h1>
     <p class="larger is-white">
-      <a href="//www.nuxeo.com/about/contact/">Contact Us</a> to get the password.
+      <iframe src="http://info.nuxeo.com/benchmarks-password.html" height="380" width="480" style="border: 0;"></iframe>
     </p>
   </div>
 </div>
