--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -3,6 +3,7 @@
 integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo="
 crossorigin="anonymous"></script>
 <script src="{{ .Site.BaseURL }}js/foundation.min.js"></script>
+<script src="{{ .Site.BaseURL }}js/featherlight.min.js"></script>
 <script src="{{ .Site.BaseURL }}js/tabs.js"></script>
 
 <nuxeo-footer year="2018"></nuxeo-footer>
