--- a/themes/hyde/layouts/partials/head.html
+++ b/themes/hyde/layouts/partials/head.html
@@ -46,6 +46,7 @@ analytics.page()
   <link rel="stylesheet" href="{{ .Site.BaseURL }}css/benchmarks.css">
   <!-- <link rel="stylesheet" href="{{ .Site.BaseURL }}css/poole.css"> -->
   <link rel="stylesheet" href="{{ .Site.BaseURL }}css/syntax.css">
+  <link rel="stylesheet" href="{{ .Site.BaseURL }}css/featherlight.min.css">
   <!-- <link rel="stylesheet" href="{{ .Site.BaseURL }}css/hyde.css"> -->
   <!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'> -->
 
