--- a/themes/hyde/static/css/benchmarks.css
+++ b/themes/hyde/static/css/benchmarks.css
@@ -369,3 +369,17 @@ dd a.tag:hover {
   background-position: center;
   background-size: cover;
 }
+
+/* Featherlight Custom */
+
+.featherlight .featherlight-close-icon {
+  min-width: inherit;
+}
+
+.featherlight-hide {
+  display: none;
+}
+
+.featherlight-hide.featherlight-inner {
+  display: block;
+}
