--- a/layouts/page/landing.html
+++ b/layouts/page/landing.html
@@ -2,13 +2,13 @@
 <body class="{{ .Site.Params.themeColor }}">
 {{ partial "header.html" . }}
 
-<div class="row is-navy">
+<div class="row padded is-navy">
   <div class="large-8 medium-10 small-12 columns">
     <h1>{{ .Title }}</h1>
   </div>
 </div>
 
-<div class="row is-navy blog-section">
+<div class="row padded is-navy blog-section">
   <div class="small-12 columns">
     <div class="content container">
       {{ .Content }}
