Use relative URL when possible

--- a/layouts/bench/single.html
+++ b/layouts/bench/single.html
@@ -153,9 +153,9 @@
           <dt>Reports</dt>
           <dd>
             <a class="tag" target="_blank"
-            href="https://benchmarks.nuxeo.com/build/{{ $data }}/archive/reports/sim10massimport/overview/index.html">» Overview and monitoring</a>
+            href="/build/{{ $data }}/archive/reports/sim10massimport/overview/index.html">» Overview and monitoring</a>
             <a class="tag" target="_blank"
-            href="https://benchmarks.nuxeo.com/build/{{ $data }}/archive/reports/sim10massimport/detail/index.html">» Gatling report</a>
+            href="/build/{{ $data }}/archive/reports/sim10massimport/detail/index.html">» Gatling report</a>
           </dd>
         </dl>
 
@@ -175,9 +175,9 @@
           <dt>Reports</dt>
           <dd>
             <a class="tag" target="_blank"
-              href="https://benchmarks.nuxeo.com/build/{{ $data }}/archive/reports/sim15bulkupdatedocuments/overview/index.html">» Overview and monitoring</a>
+              href="/build/{{ $data }}/archive/reports/sim15bulkupdatedocuments/overview/index.html">» Overview and monitoring</a>
             <a class="tag" target="_blank"
-              href="https://benchmarks.nuxeo.com/build/{{ $data }}/archive/reports/sim15bulkupdatedocuments/detail/index.html">» Gatling report</a>
+              href="/build/{{ $data }}/archive/reports/sim15bulkupdatedocuments/detail/index.html">» Gatling report</a>
           </dd>
         </dl>
         {{ end }}
@@ -208,9 +208,9 @@
           <dt>Reports</dt>
           <dd>
             <a class="tag" target="_blank"
-            href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim20createdocuments/overview/index.html">» Overview and monitoring</a>
+            href="/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim20createdocuments/overview/index.html">» Overview and monitoring</a>
             <a class="tag" target="_blank"
-            href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim20createdocuments/detail/index.html">» Gatling report</a>
+            href="/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim20createdocuments/detail/index.html">» Gatling report</a>
           </dd>
         </dl>
 
@@ -238,9 +238,9 @@
           <dt>Reports</dt>
           <dd>
             <a class="tag" target="_blank"
-            href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim30navigation/overview/index.html">» Overview and monitoring</a>
+            href="/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim30navigation/overview/index.html">» Overview and monitoring</a>
             <a class="tag" target="_blank"
-            href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim30navigation/detail/index.html">» Gatling report</a>
+            href="/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim30navigation/detail/index.html">» Gatling report</a>
           </dd>
         </dl>
 
@@ -268,9 +268,9 @@
           <dt>Reports</dt>
           <dd>
             <a class="tag" target="_blank"
-            href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim30navigationjsf/overview/index.html">» Overview and monitoring</a>
+            href="/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim30navigationjsf/overview/index.html">» Overview and monitoring</a>
             <a class="tag" target="_blank"
-            href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim30navigationjsf/detail/index.html">» Gatling report</a>
+            href="/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim30navigationjsf/detail/index.html">» Gatling report</a>
           </dd>
         </dl>
 
@@ -299,9 +299,9 @@
           <dt>Reports</dt>
           <dd>
             <a class="tag" target="_blank"
-            href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim30search/overview/index.html">» Overview and monitoring</a>
+            href="/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim30search/overview/index.html">» Overview and monitoring</a>
             <a class="tag" target="_blank"
-            href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim30search/detail/index.html">» Gatling report</a>
+            href="/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim30search/detail/index.html">» Gatling report</a>
           </dd>
         </dl>
         {{ else }}
@@ -334,9 +334,9 @@
           <dt>Reports</dt>
           <dd>
             <a class="tag" target="_blank"
-            href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim30updatedocuments/overview/index.html">» Overview and monitoring</a>
+            href="/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim30updatedocuments/overview/index.html">» Overview and monitoring</a>
             <a class="tag" target="_blank"
-            href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim30updatedocuments/detail/index.html">» Gatling report</a>
+            href="/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim30updatedocuments/detail/index.html">» Gatling report</a>
           </dd>
         </dl>
 
@@ -372,9 +372,9 @@
           <dt>Reports</dt>
           <dd>
             <a class="tag" target="_blank"
-              href="https://benchmarks.nuxeo.com/build/{{ $data }}/archive/reports/sim25bulkupdatefolders/overview/index.html">» Overview and monitoring</a>
+              href="/build/{{ $data }}/archive/reports/sim25bulkupdatefolders/overview/index.html">» Overview and monitoring</a>
             <a class="tag" target="_blank"
-              href="https://benchmarks.nuxeo.com/build/{{ $data }}/archive/reports/sim25bulkupdatefolders/detail/index.html">» Gatling report</a>
+              href="/build/{{ $data }}/archive/reports/sim25bulkupdatefolders/detail/index.html">» Gatling report</a>
           </dd>
         </dl>
         {{ end }}
@@ -413,9 +413,9 @@
           <dt>Reports</dt>
           <dd>
             <a class="tag" target="_blank"
-            href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim50crud/overview/index.html">» Overview and monitoring</a>
+            href="/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim50crud/overview/index.html">» Overview and monitoring</a>
             <a class="tag" target="_blank"
-            href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim50crud/detail/index.html">» Gatling report</a>
+            href="/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim50crud/detail/index.html">» Gatling report</a>
           </dd>
         </dl>
 
@@ -433,9 +433,9 @@
           <dt>Reports</dt>
           <dd>
             <a class="tag" target="_blank"
-              href="https://benchmarks.nuxeo.com/build/{{ $data }}/archive/reports/sim20csvexport/overview/index.html">» Overview and monitoring</a>
+              href="/build/{{ $data }}/archive/reports/sim20csvexport/overview/index.html">» Overview and monitoring</a>
             <a class="tag" target="_blank"
-              href="https://benchmarks.nuxeo.com/build/{{ $data }}/archive/reports/sim20csvexport/detail/index.html">» Gatling report</a>
+              href="/build/{{ $data }}/archive/reports/sim20csvexport/detail/index.html">» Gatling report</a>
           </dd>
         </dl>
         {{ end }}
@@ -464,9 +464,9 @@
           <dt>Reports</dt>
           <dd>
             <a class="tag" target="_blank"
-            href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim50bench/overview/index.html">» Overview and monitoring</a>
+            href="/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim50bench/overview/index.html">» Overview and monitoring</a>
             <a class="tag" target="_blank"
-            href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim50bench/detail/index.html">» Gatling report</a>
+            href="/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim50bench/detail/index.html">» Gatling report</a>
           </dd>
         </dl>
 
@@ -483,9 +483,9 @@
           <dt>Reports</dt>
           <dd>
             <a class="tag" target="_blank"
-            href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim80reindexall/overview/index.html">» Overview and monitoring</a>
+            href="/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim80reindexall/overview/index.html">» Overview and monitoring</a>
             <a class="tag" target="_blank"
-            href="https://benchmarks.nuxeo.com/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim80reindexall/detail/index.html">» Gatling report</a>
+            href="/build/{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim80reindexall/detail/index.html">» Gatling report</a>
           </dd>
         </dl>
 
