--- a/layouts/custom/single.html
+++ b/layouts/custom/single.html
@@ -135,9 +135,9 @@
       <dt>Reports</dt>
       <dd>
         <a class="tag" target="_blank"
-          href="https://benchmarks.nuxeo.com/build/custom/{{ $data }}/gatling1/sim10massimport/overview/index.html">» Overview and monitoring</a>
+          href="/build/custom/{{ $data }}/gatling1/sim10massimport/overview/index.html">» Overview and monitoring</a>
         <a class="tag" target="_blank"
-          href="https://benchmarks.nuxeo.com/build/custom/{{ $data }}/gatling1/sim10massimport/detail/index.html">» Gatling report</a>
+          href="/build/custom/{{ $data }}/gatling1/sim10massimport/detail/index.html">» Gatling report</a>
       </dd>
     </dl>
 
@@ -167,9 +167,9 @@
       <dt>Reports</dt>
       <dd>
         <a class="tag" target="_blank"
-          href="https://benchmarks.nuxeo.com/build/custom/{{ $data }}/gatling1/sim20createdocuments/overview/index.html">» Overview and monitoring</a>
+          href="/build/custom/{{ $data }}/gatling1/sim20createdocuments/overview/index.html">» Overview and monitoring</a>
         <a class="tag" target="_blank"
-          href="https://benchmarks.nuxeo.com/build/custom/{{ $data }}/gatling1/sim20createdocuments/detail/index.html">» Gatling report</a>
+          href="/build/custom/{{ $data }}/gatling1/sim20createdocuments/detail/index.html">» Gatling report</a>
       </dd>
     </dl>
 
@@ -197,9 +197,9 @@
       <dt>Reports</dt>
       <dd>
         <a class="tag" target="_blank"
-          href="https://benchmarks.nuxeo.com/build/custom/{{ $data }}/gatling1/sim30navigation/overview/index.html">» Overview and monitoring</a>
+          href="/build/custom/{{ $data }}/gatling1/sim30navigation/overview/index.html">» Overview and monitoring</a>
         <a class="tag" target="_blank"
-          href="https://benchmarks.nuxeo.com/build/custom/{{ $data }}/gatling1/sim30navigation/detail/index.html">» Gatling report</a>
+          href="/build/custom/{{ $data }}/gatling1/sim30navigation/detail/index.html">» Gatling report</a>
       </dd>
     </dl>
 
@@ -227,9 +227,9 @@
       <dt>Reports</dt>
       <dd>
         <a class="tag" target="_blank"
-          href="https://benchmarks.nuxeo.com/build/custom/{{ $data }}/gatling1/sim30navigationjsf/overview/index.html">» Overview and monitoring</a>
+          href="/build/custom/{{ $data }}/gatling1/sim30navigationjsf/overview/index.html">» Overview and monitoring</a>
         <a class="tag" target="_blank"
-          href="https://benchmarks.nuxeo.com/build/custom/{{ $data }}/gatling1/sim30navigationjsf/detail/index.html">» Gatling report</a>
+          href="/build/custom/{{ $data }}/gatling1/sim30navigationjsf/detail/index.html">» Gatling report</a>
       </dd>
     </dl>
 
@@ -258,9 +258,9 @@
       <dt>Reports</dt>
       <dd>
         <a class="tag" target="_blank"
-          href="https://benchmarks.nuxeo.com/build/custom/{{ $data }}/gatling1/sim30search/overview/index.html">» Overview and monitoring</a>
+          href="/build/custom/{{ $data }}/gatling1/sim30search/overview/index.html">» Overview and monitoring</a>
         <a class="tag" target="_blank"
-          href="https://benchmarks.nuxeo.com/build/custom/{{ $data }}/gatling1/sim30search/detail/index.html">» Gatling report</a>
+          href="/build/custom/{{ $data }}/gatling1/sim30search/detail/index.html">» Gatling report</a>
       </dd>
     </dl>
     {{ else }}
@@ -293,9 +293,9 @@
       <dt>Reports</dt>
       <dd>
         <a class="tag" target="_blank"
-          href="https://benchmarks.nuxeo.com/build/custom/{{ $data }}/gatling1/sim30updatedocuments/overview/index.html">» Overview and monitoring</a>
+          href="/build/custom/{{ $data }}/gatling1/sim30updatedocuments/overview/index.html">» Overview and monitoring</a>
         <a class="tag" target="_blank"
-          href="https://benchmarks.nuxeo.com/build/custom/{{ $data }}/gatling1/sim30updatedocuments/detail/index.html">» Gatling report</a>
+          href="/build/custom/{{ $data }}/gatling1/sim30updatedocuments/detail/index.html">» Gatling report</a>
       </dd>
     </dl>
 
@@ -332,9 +332,9 @@
       <dt>Reports</dt>
       <dd>
         <a class="tag" target="_blank"
-          href="https://benchmarks.nuxeo.com/build/custom/{{ $data }}/gatling1/sim50crud/overview/index.html">» Overview and monitoring</a>
+          href="/build/custom/{{ $data }}/gatling1/sim50crud/overview/index.html">» Overview and monitoring</a>
         <a class="tag" target="_blank"
-          href="https://benchmarks.nuxeo.com/build/custom/{{ $data }}/gatling1/sim50crud/detail/index.html">» Gatling report</a>
+          href="/build/custom/{{ $data }}/gatling1/sim50crud/detail/index.html">» Gatling report</a>
       </dd>
     </dl>
 
@@ -362,9 +362,9 @@
       <dt>Reports</dt>
       <dd>
         <a class="tag" target="_blank"
-          href="https://benchmarks.nuxeo.com/build/custom/{{ $data }}/gatling1/sim50bench/overview/index.html">» Overview and monitoring</a>
+          href="/build/custom/{{ $data }}/gatling1/sim50bench/overview/index.html">» Overview and monitoring</a>
         <a class="tag" target="_blank"
-          href="https://benchmarks.nuxeo.com/build/custom/{{ $data }}/gatling1/sim50bench/detail/index.html">» Gatling report</a>
+          href="/build/custom/{{ $data }}/gatling1/sim50bench/detail/index.html">» Gatling report</a>
       </dd>
     </dl>
 
