--- a/themes/hyde/layouts/partials/head.html
+++ b/themes/hyde/layouts/partials/head.html
@@ -5,27 +5,6 @@
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   {{ .Hugo.Generator }}
 
-  <!-- 0. Include Nuxeo Font. -->
-  <style>
-    @font-face {
-      font-family: 'Neue Haas Grotesk';
-      src: local('Neue Haas Grotesk'),
-      local('Neue Haas Grotesk Display Std'),
-      url('https://static.nuxeo.com/fonts/NHaasGroteskDSStd-55Rg.otf') format('opentype');
-    }
-    @font-face {
-      font-family: 'Neue Haas Grotesk';
-      font-weight: bold;
-      src: local('Neue Haas Grotesk Black'),
-      local('Neue Haas Grotesk Display Black'),
-      url('https://static.nuxeo.com/fonts/NHaasGroteskDSStd-95Blk.otf') format('opentype');
-    }
-  </style>
-  <!-- Standard Nuxeo header and footer - Load webcomponents-lite.min.js for polyfill support and import elements. -->
-  <script src="https://static.nuxeo.com/satellite/latest/bower_components/webcomponentsjs/custom-elements-es5-adapter.js"></script>
-  <script src="https://static.nuxeo.com/satellite/latest/bower_components/webcomponentsjs/webcomponents-lite.js"></script>
-  <link rel="import" href="https://static.nuxeo.com/satellite/latest/elements/elements.html">
-
   <!-- Enable responsiveness on mobile devices-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
@@ -42,12 +21,10 @@ analytics.page()
 
   <!-- CSS -->
 
-  <link rel="stylesheet" href="//static.nuxeo.com/satellite/8.2.1/css/v2-nuxeo-styles.css">
+  <link rel="stylesheet" href="https://static.nuxeo.com/components/v1/global.css">
+  <link rel="stylesheet" href="https://static.nuxeo.com/satellite/8.2.1/css/v2-nuxeo-styles.css">
   <link rel="stylesheet" href="{{ .Site.BaseURL }}css/benchmarks.css">
-  <!-- <link rel="stylesheet" href="{{ .Site.BaseURL }}css/poole.css"> -->
   <link rel="stylesheet" href="{{ .Site.BaseURL }}css/syntax.css">
-  <!-- <link rel="stylesheet" href="{{ .Site.BaseURL }}css/hyde.css"> -->
-  <!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'> -->
 
   <!-- Icons -->
   <link rel="apple-touch-icon" sizes="57x57" href="https://www.nuxeo.com/assets/icons/apple-touch-icon.png?v=3">
@@ -64,4 +41,5 @@ analytics.page()
 
   <!-- RSS -->
   <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
+  <script defer src="https://static.nuxeo.com/components/v1/bundle.min.js"></script>
 </head>
