Menu Items fixed

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,6 +1,6 @@
 <nx-header name="Benchmarks" homelabel="Benchmarks Home">
-  <nx-header--menu-item href="{{ .Site.BaseURL }}milestones/index.html">Milestones</nx-header--menu-item>
-  <nx-header--menu-item href="{{ .Site.BaseURL }}milestones/index.html">Continuous</nx-header--menu-item>
+  <nx-header--menu-item href="{{ .Site.BaseURL }}milestone/index.html">Milestones</nx-header--menu-item>
+  <nx-header--menu-item href="{{ .Site.BaseURL }}continuous/index.html">Continuous</nx-header--menu-item>
   <nx-header--menu-item href="{{ .Site.BaseURL }}misc/index.html">Misc</nx-header--menu-item>
   <nx-header--menu-item href="{{ .Site.BaseURL }}workbench/index.html">Workbench</nx-header--menu-item>
   <nx-header--menu-item href="{{ .Site.BaseURL }}custom/index.html" classes="end-of-section"
