Duotone images removed

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,7 +2,7 @@
 <body class="{{ .Site.Params.themeColor }} home">
 {{ partial "header.html" . }}
 
-<div class="hero row cover padded is-bg-blue is-white" style="background-image: url('https://res.cloudinary.com/nuxeo/image/upload/w_1600,h_500,q_auto,c_fill,g_center,dpr_auto,f_auto/backgrounds/duotone9');">
+<div class="hero row padded is-bg-blue is-white">
   <div class="large-8 medium-10 small-12 columns">
     <h1>Nuxeo Performance Benchmarks</h1>
     <p class="larger is-white">
@@ -53,14 +53,10 @@
   </div>
 </div>
 
-<div class="row padded collapse">
-  <div class="small-12 medium-6 columns is-bg-aqua cover" style="background-image: url('https://res.cloudinary.com/nuxeo/image/upload/w_600,q_auto:eco,c_limit,dpr_auto,f_auto/backgrounds/duotone9')">
-  </div>
-  <div class="small-12 medium-6 columns is-bg-navy">
-    <div class="padded">
-      <h2>About Nuxeo</h2>
-      <p>We're focused on creating the world's most flexible, scalable Content Services Platform. We help out customers build applications that take advantage of the latest technologies and content methodologies. To achieve this, we built a platform and intuitive tools to make it easy for you to quicky build the applications you need to soolve even your most complex content challenges.</p>
-    </div>
+<div class="row padded collapse is-bg-navy">
+  <div class="large-8 medium-10 small-12 columns">
+    <h2>About Nuxeo</h2>
+    <p>We're focused on creating the world's most flexible, scalable Content Services Platform. We help out customers build applications that take advantage of the latest technologies and content methodologies. To achieve this, we built a platform and intuitive tools to make it easy for you to quicky build the applications you need to soolve even your most complex content challenges.</p>
   </div>
 </div>
 
