--- a/layouts/section/milestone.html
+++ b/layouts/section/milestone.html
@@ -2,7 +2,7 @@
 <body class="{{ .Site.Params.themeColor }}">
 {{ partial "header.html" . }}
 
-<div class="hero row cover padded is-bg-blue is-white" style="background-image: url('https://res.cloudinary.com/nuxeo/image/upload/w_1600,h_400,q_auto:eco,c_fill,g_center,dpr_auto,f_auto/backgrounds/duotone9');">
+<div class="hero row padded is-bg-blue is-white">
   <div class="large-8 medium-10 small-12 columns">
     <h1>Milestone Benchmarks results</h1>
     <p class="larger is-white">
